[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Choices/Choices.gd" type="Script" id=2]

[node name="Choices" type="HBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ScrollContainer" type="VBoxContainer" parent="."]
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ChoiceList" type="ItemList" parent="ScrollContainer"]
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
same_column_width = true
icon_scale = 0.3

[node name="Separator" type="VSeparator" parent="."]
visible = false
offset_left = 1016.0
offset_right = 1024.0
offset_bottom = 600.0

[node name="LabelScrollContainer" type="ScrollContainer" parent="."]
visible = false
offset_left = 516.0
offset_right = 1024.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Label" type="Label" parent="LabelScrollContainer"]
offset_right = 508.0
offset_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
autowrap = true

[connection signal="item_selected" from="ScrollContainer/ChoiceList" to="." method="_on_ChoiceList_item_selected"]
